--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,37 @@
-*{
+/* Reset */
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-}
+  }
+  
+  /* Fonts */
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+  
+  /* Variables */
+  :root {
+    --primary-color: #333;
+    --secondary-color: #ccc;
+    --highlight-color: #ff5e00;
+  }
+  
+  /* Global styles */
+  body {
+    font-family: 'Roboto', sans-serif;
+    background-color: #000000;
+  }
+  
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+  }
+
+ .btn-buy{
+  text-align: center;
+  
+ }
+
+  p{
+    text-align: center;
+  }
